force-app/main/default/objects/PropertyMeasureType__c/PropertyMeasureType__c.object-meta.xml
<CustomObject>
    <description>Specifies a list of Property Measure Types and related data</description>
    <label>Property Measure Type</label>
    <nameField>
        <label>Measure Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Property Measure Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>