force-app/main/default/objects/PropertyMeasureType__c/fields/Average_Spend__c.field-meta.xml
<CustomField>
    <fullName>Average_Spend__c</fullName>
    <inlineHelpText>For flow use only.</inlineHelpText>
    <label>Average Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>