force-app/main/default/objects/PropertyMeasureType__c/fields/Category_Name__c.field-meta.xml
<CustomField>
    <fullName>Category_Name__c</fullName>
    <formula>IF(ISPICKVAL(Cost_Cap_Category__c,&apos;Energy Performance&apos;), &apos;EP&apos;, &apos;LCH&apos;) + &apos; - &apos; +  Name</formula>
    <label>Category - Name</label>
    <type>Text</type>
</CustomField>