force-app/main/default/objects/PropertyMeasureType__c/fields/Cost_Cap_Category__c.field-meta.xml
<CustomField>
    <fullName>Cost_Cap_Category__c</fullName>
    <description>ABS Cost Cap Category</description>
    <inlineHelpText>ABS Cost Cap Category</inlineHelpText>
    <label>Cost Cap Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Energy Performance</fullName>
            </value>
            <value>
                <fullName>Low Carbon Heat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>