force-app/main/default/objects/PropertyMeasureType__c/fields/Measure_Type_Description__c.field-meta.xml
<CustomField>
    <fullName>Measure_Type_Description__c</fullName>
    <description>Description of measure type</description>
    <label>Measure Type Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>