force-app/main/default/objects/PropertyMeasureType__c/fields/Measure_Type_Usage__c.field-meta.xml
<CustomField>
    <fullName>Measure_Type_Usage__c</fullName>
    <label>Measure Type Usage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SHF</fullName>
            </value>
            <value>
                <fullName>LG</fullName>
            </value>
            <value>
                <fullName>BOTH</fullName>
                <default>true</default>
                <label>BOTH</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>