force-app/main/default/objects/PropertyMeasureType__c/fields/Parent_Measure_Type__c.field-meta.xml
<CustomField>
    <fullName>Parent_Measure_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Measure Type</label>
    <referenceTo>PropertyMeasureType__c</referenceTo>
    <relationshipLabel>Property Measure Types</relationshipLabel>
    <relationshipName>Property_Measure_Types</relationshipName>
    <type>Lookup</type>
</CustomField>