force-app/main/default/objects/PropertyMeasureType__c/fields/Parent_Measure_Type_Text__c.field-meta.xml
<CustomField>
    <fullName>Parent_Measure_Type_Text__c</fullName>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Measure Type Text</label>
    <type>Text</type>
</CustomField>