force-app/main/default/objects/PropertyMeasureType__c/fields/Trustmark_Category__c.field-meta.xml
<CustomField>
    <fullName>Trustmark_Category__c</fullName>
    <description>Wording used by Trustmark to identify the parent category of this type of Measure</description>
    <label>Trustmark Category</label>
    <length>150</length>
    <type>Text</type>
</CustomField>