force-app/main/default/objects/PropertyMeasureType__c/fields/Trustmark_type__c.field-meta.xml
<CustomField>
    <fullName>Trustmark_type__c</fullName>
    <description>Wording used by Trustmark to identify this type of Measure</description>
    <label>Trustmark type</label>
    <length>150</length>
    <type>Text</type>
</CustomField>