force-app/main/default/objects/PropertyMeasureType__c/recordTypes/DESNZ.recordType-meta.xml
<RecordType>
    <fullName>DESNZ</fullName>
    <active>true</active>
    <label>DESNZ</label>
</RecordType>