force-app/main/default/objects/PropertyMeasureType__c/recordTypes/Trustmark.recordType-meta.xml
<RecordType>
    <fullName>Trustmark</fullName>
    <active>true</active>
    <label>Trustmark</label>
</RecordType>