force-app/main/default/objects/PropertyMeasureType__c/listViews/ABS_Measure_Types.listView-meta.xml
<ListView>
    <fullName>ABS_Measure_Types</fullName>
    <columns>NAME</columns>
    <columns>Category_Name__c</columns>
    <columns>Average_Spend__c</columns>
    <columns>Origin_Type__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Status__c</columns>
    <columns>Cost_Cap_Category__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>DESNZ Approved</value>
    </filters>
    <label>ABS Measure Types</label>
</ListView>