force-app/main/default/objects/PropertyMeasureType__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Cost_Cap_Category__c</columns>
    <columns>Average_Price_Limit__c</columns>
    <columns>Status__c</columns>
    <columns>Origin_Type__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Parent_Measure_Type__c</columns>
    <columns>Trustmark_Category__c</columns>
    <columns>Trustmark_type__c</columns>
    <columns>Measure_Type_Usage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>